objects/AcctSeed__Inventory_Cost__c/AcctSeed__Inventory_Cost__c.object-meta.xml
<CustomObject>
    <description>Used to track product cost when average cost is enabled.</description>
    <label>Inventory Cost</label>
    <nameField>
        <displayFormat>IC-{00000}</displayFormat>
        <label>Inventory Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>