objects/AcctSeed__Inventory_Cost__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ledger</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Ledger__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Transactional</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Inventory Costs</relationshipLabel>
    <relationshipName>Inventory_Costs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>