objects/AcctSeed__Inventory_Cost__c/fields/AcctSeed__Product__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Costs</relationshipLabel>
    <relationshipName>Inventory_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>