objects/AcctSeed__Inventory_Cost__c/fields/AcctSeed__Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Unit_Cost__c</fullName>
    <inlineHelpText>Denotes the average cost for the associated product.</inlineHelpText>
    <label>Unit Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>