objects/AcctSeed__Inventory_Cost__c/fields/Latest_Cost_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Cost_Update_Date__c</fullName>
    <label>Latest Cost Update Date</label>
    <type>Date</type>
</CustomField>